--- a/haskeline.cabal
+++ b/haskeline.cabal
@@ -64,7 +64,13 @@ flag examples
   default:     True
   manual:      True
 
+common common-lang
+  default-extensions: LambdaCase
+  default-language:   Haskell98
+
 library
+  import:             common-lang
+
   -- We require ghc>=7.4.1 (base>=4.5) to use the base library encodings, even
   -- though it was implemented in earlier releases, due to GHC bug #5436 which
   -- wasn't fixed until 7.4.1
@@ -79,7 +85,6 @@ library
     , stm           >=2.4  && <2.6
     , transformers  >=0.2  && <0.7
 
-  default-language:   Haskell98
   default-extensions:
     CPP
     DeriveDataTypeable
@@ -159,9 +164,9 @@ library
   ghc-options:        -Wall -Wcompat
 
 test-suite haskeline-tests
+  import:             common-lang
   type:               exitcode-stdio-1.0
   hs-source-dirs:     tests
-  default-language:   Haskell98
 
   if os(windows)
     buildable: False
@@ -187,6 +192,8 @@ test-suite haskeline-tests
 
 -- The following program is used by unit tests in `tests` executable
 executable haskeline-examples-Test
+  import:         common-lang
+
   if !flag(examples)
     buildable: False
 
@@ -195,6 +202,5 @@ executable haskeline-examples-Test
     , containers
     , haskeline
 
-  default-language: Haskell2010
-  hs-source-dirs:   examples
-  main-is:          Test.hs
+  hs-source-dirs: examples
+  main-is:        Test.hs
