--- a/haskeline.cabal
+++ b/haskeline.cabal
@@ -1,8 +1,8 @@
+cabal-version:      2.2
 name:               haskeline
-cabal-version:      >=1.10
 version:            0.8.2.1
 category:           User Interfaces
-license:            BSD3
+license:            BSD-3-Clause
 license-file:       LICENSE
 copyright:          (c) Judah Jacobson
 author:             Judah Jacobson
@@ -75,7 +75,7 @@ library
   -- though it was implemented in earlier releases, due to GHC bug #5436 which
   -- wasn't fixed until 7.4.1
   build-depends:
-      base          >=4.9  && <4.20
+      base          >=4.9  && <4.21
     , bytestring    >=0.9  && <0.13
     , containers    >=0.4  && <0.8
     , directory     >=1.1  && <1.4
